--- a/PokemonCard/app.json
+++ b/PokemonCard/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5866685a-76e4-4733-ab4e-552b2c199b95"
+      }
     }
   }
 }
