--- a/ClassicGames/app.json
+++ b/ClassicGames/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "2d94b09d-44f2-41ed-95b1-5108d0dac10c"
+      }
     }
   }
 }
